# pkg/db/models/arts.go
@@ -106,7 +106,7 @@ var ArtRels = struct {
 // artR is where relationships are stored.
 type artR struct {
 	Author        *User             `boil:"Author" json:"Author" toml:"Author" yaml:"Author"`
-	Image         *Medium           `boil:"Image" json:"Image" toml:"Image" yaml:"Image"`
+	Image         *Media            `boil:"Image" json:"Image" toml:"Image" yaml:"Image"`
 	ArtVariations ArtVariationSlice `boil:"ArtVariations" json:"ArtVariations" toml:"ArtVariations" yaml:"ArtVariations"`
 }
 
@@ -122,7 +122,7 @@ func (r *artR) GetAuthor() *User {
 	return r.Author
 }
 
-func (r *artR) GetImage() *Medium {
+func (r *artR) GetImage() *Media {
 	if r == nil {
 		return nil
 	}
@@ -484,14 +484,14 @@ func (o *Art) Author(mods ...qm.QueryMod) userQuery {
 }
 
 // Image pointed to by the foreign key.
-func (o *Art) Image(mods ...qm.QueryMod) mediumQuery {
+func (o *Art) Image(mods ...qm.QueryMod) mediaQuery {
 	queryMods := []qm.QueryMod{
 		qm.Where("\"id\" = ?", o.ImageID),
 	}
 
 	queryMods = append(queryMods, mods...)
 
-	return Media(queryMods...)
+	return Medias(queryMods...)
 }
 
 // ArtVariations retrieves all the art_variation's ArtVariations with an executor.
@@ -690,8 +690,8 @@ func (artL) LoadImage(ctx context.Context, e boil.ContextExecutor, singular bool
 	}
 
 	query := NewQuery(
-		qm.From(`media`),
-		qm.WhereIn(`media.id in ?`, argsSlice...),
+		qm.From(`medias`),
+		qm.WhereIn(`medias.id in ?`, argsSlice...),
 	)
 	if mods != nil {
 		mods.Apply(query)
@@ -699,22 +699,22 @@ func (artL) LoadImage(ctx context.Context, e boil.ContextExecutor, singular bool
 
 	results, err := query.QueryContext(ctx, e)
 	if err != nil {
-		return errors.Wrap(err, "failed to eager load Medium")
+		return errors.Wrap(err, "failed to eager load Media")
 	}
 
-	var resultSlice []*Medium
+	var resultSlice []*Media
 	if err = queries.Bind(results, &resultSlice); err != nil {
-		return errors.Wrap(err, "failed to bind eager loaded slice Medium")
+		return errors.Wrap(err, "failed to bind eager loaded slice Media")
 	}
 
 	if err = results.Close(); err != nil {
-		return errors.Wrap(err, "failed to close results of eager load for media")
+		return errors.Wrap(err, "failed to close results of eager load for medias")
 	}
 	if err = results.Err(); err != nil {
-		return errors.Wrap(err, "error occurred during iteration of eager loaded relations for media")
+		return errors.Wrap(err, "error occurred during iteration of eager loaded relations for medias")
 	}
 
-	if len(mediumAfterSelectHooks) != 0 {
+	if len(mediaAfterSelectHooks) != 0 {
 		for _, obj := range resultSlice {
 			if err := obj.doAfterSelectHooks(ctx, e); err != nil {
 				return err
@@ -730,7 +730,7 @@ func (artL) LoadImage(ctx context.Context, e boil.ContextExecutor, singular bool
 		foreign := resultSlice[0]
 		object.R.Image = foreign
 		if foreign.R == nil {
-			foreign.R = &mediumR{}
+			foreign.R = &mediaR{}
 		}
 		foreign.R.ImageArts = append(foreign.R.ImageArts, object)
 		return nil
@@ -741,7 +741,7 @@ func (artL) LoadImage(ctx context.Context, e boil.ContextExecutor, singular bool
 			if queries.Equal(local.ImageID, foreign.ID) {
 				local.R.Image = foreign
 				if foreign.R == nil {
-					foreign.R = &mediumR{}
+					foreign.R = &mediaR{}
 				}
 				foreign.R.ImageArts = append(foreign.R.ImageArts, local)
 				break
@@ -924,14 +924,14 @@ func (o *Art) SetAuthor(ctx context.Context, exec boil.ContextExecutor, insert b
 // Sets o.R.Image to related.
 // Adds o to related.R.ImageArts.
 // Uses the global database handle.
-func (o *Art) SetImageG(ctx context.Context, insert bool, related *Medium) error {
+func (o *Art) SetImageG(ctx context.Context, insert bool, related *Media) error {
 	return o.SetImage(ctx, boil.GetContextDB(), insert, related)
 }
 
 // SetImage of the art to the related item.
 // Sets o.R.Image to related.
 // Adds o to related.R.ImageArts.
-func (o *Art) SetImage(ctx context.Context, exec boil.ContextExecutor, insert bool, related *Medium) error {
+func (o *Art) SetImage(ctx context.Context, exec boil.ContextExecutor, insert bool, related *Media) error {
 	var err error
 	if insert {
 		if err = related.Insert(ctx, exec, boil.Infer()); err != nil {
@@ -965,7 +965,7 @@ func (o *Art) SetImage(ctx context.Context, exec boil.ContextExecutor, insert bo
 	}
 
 	if related.R == nil {
-		related.R = &mediumR{
+		related.R = &mediaR{
 			ImageArts: ArtSlice{o},
 		}
 	} else {
@@ -979,14 +979,14 @@ func (o *Art) SetImage(ctx context.Context, exec boil.ContextExecutor, insert bo
 // Sets o.R.Image to nil.
 // Removes o from all passed in related items' relationships struct.
 // Uses the global database handle.
-func (o *Art) RemoveImageG(ctx context.Context, related *Medium) error {
+func (o *Art) RemoveImageG(ctx context.Context, related *Media) error {
 	return o.RemoveImage(ctx, boil.GetContextDB(), related)
 }
 
 // RemoveImage relationship.
 // Sets o.R.Image to nil.
 // Removes o from all passed in related items' relationships struct.
-func (o *Art) RemoveImage(ctx context.Context, exec boil.ContextExecutor, related *Medium) error {
+func (o *Art) RemoveImage(ctx context.Context, exec boil.ContextExecutor, related *Media) error {
 	var err error
 
 	queries.SetScanner(&o.ImageID, nil)
